--- a/templates/characters.html
+++ b/templates/characters.html
@@ -22,7 +22,7 @@
 ```
   <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
     data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon custom-toggler"></span>
   </button>
 
   <div class="collapse navbar-collapse justify-content-end" id="navMenu">
