--- a/templates/party_player.html
+++ b/templates/party_player.html
@@ -19,7 +19,7 @@
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon custom-toggler"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
