--- a/templates/signup_login.html
+++ b/templates/signup_login.html
@@ -21,7 +21,7 @@
       <!-- Hamburger button -->
       <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
         data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon custom-toggler"></span>
       </button>
 
       <!-- Navbar items -->
