--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -74,7 +74,12 @@ border-color: gold;
 }
 
 .custom-toggler .navbar-toggler-icon {
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='[http://www.w3.org/2000/svg'%3E%3Cpath](http://www.w3.org/2000/svg'%3E%3Cpath) stroke='gold' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  background-image: none;
+  position: relative;
+  width: 24px;
+  height: 2px;
+  background-color: gold;
+  box-shadow: 0 7px 0 0 gold, 0 14px 0 0 gold;
 }
 
 /* Mobile Navbar */
